--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
     "nodemailer": "^6.9.4",
+    "twilio": "^4.15.0",
     "uuid": "^9.0.0"
   }
 }
