--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.4",
     "twilio": "^4.15.0",
     "uuid": "^9.0.0"
